change config to zksync

--- a/config.yaml
+++ b/config.yaml
@@ -2,21 +2,21 @@
 name: erc20indexer
 description: ERC-20 indexer
 networks:
-  - id: 11155111 # Ethereum Mainnet
+  - id: 324 # Ethereum Mainnet
     # op: 10, arbitrum: 42161, scroll: 534352, sepolia: 11155111, zksync-era: 324
     # start_block: 124269527 # optimism
     # start_block: 3604423 # scroll
     # start_block: 244769593 # arbitrum-one
-    start_block: 6535522 # sepolia
-    # start_block: 28609914 # zksync-era
+    # start_block: 6535522 # sepolia
+    start_block: 42154804 # zksync-era
     contracts:
       - name: MerkleDistributorFactory
         abi_file_path: abis/MerkleDistributorFactory.json
         # address: 0x3fD1AB4577b80f184de4E64C980eBA019b6C6D8E # optimism
         # address: 0x35eca762d594e734e58Fa2838EAA61A359606289 # scroll
         # address: 0xA436de894D19Ff26268fCe4350b90fDbb6BB8219 # arbitrum
-        address: 0xb0B8394c1365D0caE674b3254B1e4A19aAEddc5A # sepolia
-        # address: 0x7a532BD262291EeA040A3D61d7BeB3220ff06687 # zksync-era
+        # address: 0xb0B8394c1365D0caE674b3254B1e4A19aAEddc5A # sepolia
+        address: 0xbfF99D3Bc98c97AD6486eC114436DeA7D38E063e # zksync-era
         handler: src/EventHandlers.ts
         events:
           - event: DistributorCreated(uint256 total,bytes32 id,string name,string message,address token_address,uint256 number,uint256 duration,address creator,uint256 creation_time, address distributor)
